hphp/test/slow/hack_mode/2204.php.expectf

Fatal error: syntax error, unexpected T_HH_ERROR, expecting $end in %s/test/slow/hack_mode/2204.php on line 2
